# mcp-recorder

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  scenarios.yml
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: check.yml  publish.yml
src/mcp_recorder/: __init__.py  _types.py  _utils.py  cli.py  matcher.py  mcp_client.py  proxy.py  pytest_plugin.py  replayer.py  scenarios.py  scrubber.py  transport.py  verifier.py
tests/: conftest.py  mock_server.py  test_client.py
tests/cassettes/: mock_session.json
tests/fixtures/: stdio_server.py
tests/integration/: test_replay.py  test_stdio.py
tests/unit/: test_cli_flags.py  test_matcher.py  test_proxy_transport.py  test_scenarios_env.py  test_scenarios_stdio.py  test_scrubber.py  test_transport.py  test_verifier.py
